--- a/Resources/Private/Templates/Administration/Index.html
+++ b/Resources/Private/Templates/Administration/Index.html
@@ -18,7 +18,8 @@
                     <table class="table table-striped table-hover">
                         <thead>
                         <tr>
-                            <th><f:translate id="name" /></th>
+                            <th></th>
+                            <th><f:translate id="title" /></th>
                             <th><f:translate id="form.starttime" /></th>
                             <th><f:translate id="form.endtime" /></th>
                             <th><f:translate id="participants" /></th>
@@ -28,8 +29,14 @@
                         </thead>
                         <tbody>
                         <f:for each="{appointments}" as="appointment">
-                            <tr class="{f:if(condition: appointment.overdue, then: 'danger')}{f:if(condition: appointment.disabled, then: ' warning')}{f:if(condition: '{appointment} == {current}', then: ' info')}">
-                                <td>{appointment.name}</td>
+                            <tr class="{f:if(condition: appointment.disabled, then: ' warning')}{f:if(condition: appointment.overdue, then: ' danger')}{f:if(condition: '{appointment} == {current}', then: ' info')}">
+                                <td>
+                                    <f:if condition="{appointment.disabled}">
+                                        <f:then><i class="fa fa-eye-slash fa-fw"></i></f:then>
+                                        <f:else><i class="fa fa-eye fa-fw"></i></f:else>
+                                    </f:if>
+                                </td>
+                                <td {f:if(condition: appointment.hideTitle, then: 'style="color:#999;cursor:help" title="{f:translate(id: \'hiddenTitle\')}"')}>{appointment.title}</td>
                                 <td><i class="fa fa-calendar{f:if(condition: appointment.overdue, then: '-times')}-o fa-fw text-success"></i> {appointment.starttime -> f:format.date(format: settings.date.format.short)}</td>
                                 <td><i class="fa fa-calendar{f:if(condition: appointment.overdue, then: '-times')}-o fa-fw text-danger"></i> {appointment.endtime -> f:format.date(format: settings.date.format.short)}</td>
                                 <td>
