--- a/Resources/Private/Templates/Administration/ShowAppointment.html
+++ b/Resources/Private/Templates/Administration/ShowAppointment.html
@@ -1,6 +1,6 @@
 <f:layout name="Default" />
 
-<f:section name="Title">Details - {appointment.name}</f:section>
+<f:section title="Title">Details - {appointment.title}</f:section>
 
 <f:section name="Styles"></f:section>
 <f:section name="HeaderJS"></f:section>
@@ -8,7 +8,7 @@
 <f:section name="Content">
     <div class="container">
         <div class="row">
-            <h1>{appointment.name}</h1>
+            <h1>{appointment.title}</h1>
         </div>
         <div class="clearfix">&nbsp;</div>
         <table class="table table-striped table-hover">
