--- a/Resources/Private/Templates/Administration/Index.html
+++ b/Resources/Private/Templates/Administration/Index.html
@@ -61,10 +61,10 @@
                                             <f:link.action action="editAppointment" controller="Administration" arguments="{appointment: appointment}" title="{f:translate(id: 'title.appointment.edit')}">
                                                 <i class="fa fa-pencil fa-fw text-default"></i>
                                             </f:link.action>
-                                            <f:link.action action="deleteAppointment" controller="Administration" arguments="{appointment: appointment}" title="{f:translate(id: 'title.appointment.delete')}" onclick="return confirm('{f:translate(id: \"modal.delete.confirm\")}')">
-                                                <i class="fa fa-trash-o fa-fw text-danger"></i>
-                                            </f:link.action>
                                         </f:if>
+                                        <f:link.action action="deleteAppointment" controller="Administration" arguments="{appointment: appointment}" title="{f:translate(id: 'title.appointment.delete')}" onclick="return confirm('{f:translate(id: \"modal.delete.confirm\")}')">
+                                            <i class="fa fa-trash-o fa-fw text-danger"></i>
+                                        </f:link.action>
                                     </f:security.ifHasRole>
                                 </td>
                             </tr>
@@ -96,13 +96,15 @@
                     <f:for each="{slides}" as="slide">
                         <div class="slide-preview">
                             <img src="{f:uri.resource(resource: slide)}" height="150" title="{slide.filename}" data-toggle="tooltip" />
-                            <f:link.action action="removeSlide"
-                                           arguments="{slide: slide.sha1}"
-                                           class="alert alert-danger link"
-                                           title="{f:translate(id: 'title.slide.delete')}"
-                                           additionalAttributes="{data-toggle: 'tooltip', data-placement: 'bottom'}">
-                                <i class="fa fa-trash-o fa-fw text-danger"></i>
-                            </f:link.action>
+                            <f:security.ifHasRole role="Administrator">
+                                <f:link.action action="removeSlide"
+                                               arguments="{slide: slide.sha1}"
+                                               class="alert alert-danger link"
+                                               title="{f:translate(id: 'title.slide.delete')}"
+                                               additionalAttributes="{data-toggle: 'tooltip', data-placement: 'bottom'}">
+                                    <i class="fa fa-trash-o fa-fw text-danger"></i>
+                                </f:link.action>
+                            </f:security.ifHasRole>
                         </div>
                     </f:for>
                     <div class="clearfix"></div>
