--- a/Resources/Private/Templates/Standard/Index.html
+++ b/Resources/Private/Templates/Standard/Index.html
@@ -26,7 +26,7 @@
             <![CDATA[<script type="text/javascript">
                 $(function() {
                     $('body').vegas({
-                        delay: 225000,
+                        delay: ]]>{settings.timeout}<![CDATA[,
                         transitionDuration: 0,
                         slides: ]]>{vegasSlidesJs}<![CDATA[
                     });
