--- a/Resources/Private/Templates/Administration/ShowAppointment.html
+++ b/Resources/Private/Templates/Administration/ShowAppointment.html
@@ -1,3 +1,4 @@
+{namespace ecom=S3b0\ViewHelperCollection\ViewHelpers}
 <f:layout name="Default" />
 
 <f:section name="Title">Details - {appointment.title}</f:section>
@@ -13,16 +14,21 @@
         <div class="clearfix">&nbsp;</div>
         <table class="table table-striped table-hover">
             <tr>
-                <td><i class="fa fa fa-clock-o fa-fw text-success"></i> <f:translate id="form.starttime" /></td>
+                <td><i class="fa fa-clock-o fa-fw text-success"></i> <f:translate id="form.starttime" /></td>
                 <td>{appointment.starttime -> f:format.date(format: settings.date.format.long, forceLocale: settings.i18n.defaultLocale)}</td>
             </tr>
             <tr>
-                <td><i class="fa fa fa-clock-o fa-fw text-danger"></i> <f:translate id="form.endtime" /></td>
+                <td><i class="fa fa-clock-o fa-fw text-danger"></i> <f:translate id="form.endtime" /></td>
                 <td>{appointment.endtime -> f:format.date(format: settings.date.format.long, forceLocale: settings.i18n.defaultLocale)}</td>
             </tr>
             <tr>
-                <td><i class="fa fa fa-globe fa-fw"></i> <f:translate id="form.displayLanguage" /></td>
+                <td><i class="fa fa-globe fa-fw"></i> <f:translate id="form.displayLanguage" /></td>
                 <td>{appointment.displayLanguage}</td>
+            </tr>
+            <tr>
+            <tr>
+                <td><i class="fa fa-align-justify fa-fw"></i> <f:translate id="form.freetext" /></td>
+                <td>{appointment.freetext -> f:format.nl2br()}</td>
             </tr>
             <tr>
                 <td><i class="fa fa-picture-o fa-fw"></i> <f:translate id="image" /></td>
@@ -40,7 +46,9 @@
                     <f:if condition="{appointment.participants -> f:count()}">
                         <f:then>
                             <f:for each="{appointment.participants}" as="participant">
-                                <f:translate id="gender{participant.salutation}" /> {participant.name}<br />
+                                <f:translate id="gender{participant.salutation}" />
+                                <ecom:getArrayElement array="{settings.participants.titles}" key="{participant.title}" />
+                                {participant.name}<br />
                             </f:for>
                         </f:then>
                         <f:else>-</f:else>
