Extract file formats permitted for image uploads

--- a/Resources/Private/Templates/Administration/EditAppointment.html
+++ b/Resources/Private/Templates/Administration/EditAppointment.html
@@ -67,7 +67,7 @@
                 <div class="form-group">
                     <div class="col-md-6">
                         <label for="image"><f:translate id="image" /></label>
-                        <f:form.upload property="image" value="{appointment.image}" id="image" additionalAttributes="{accept: 'image/gif, image/jpeg, image/png'}" />
+                        <f:form.upload property="image" value="{appointment.image}" id="image" additionalAttributes="{accept: settings.uploads.image.formats}" />
                         <p class="help-block"><f:translate id="form.image.help" /></p>
                     </div>
                     <div class="col-md-6">
