--- a/Resources/Private/Templates/Administration/NewAppointment.html
+++ b/Resources/Private/Templates/Administration/NewAppointment.html
@@ -65,7 +65,7 @@
                 </div>
                 <div class="form-group">
                     <label for="image"><f:translate id="image" /></label>
-                    <f:form.upload property="image" id="image" additionalAttributes="{accept: 'image/gif, image/jpeg, image/png'}" />
+                    <f:form.upload property="image" id="image" additionalAttributes="{accept: settings.uploads.image.formats}" />
                     <p class="help-block"><f:translate id="form.image.help" /></p>
                 </div>
                 <div class="clearfix">&nbsp;</div>
