--- a/Resources/Private/Layouts/Terminal.html
+++ b/Resources/Private/Layouts/Terminal.html
@@ -7,11 +7,11 @@
         <!-- Custom CSS -->
         <link rel="stylesheet" href="{f:uri.resource(path: 'Styles/main.min.css')}" />
         <!-- Font Awesome -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="{f:uri.resource(path: 'bower_components/font-awesome/css/font-awesome.min.css')}">
         <!-- TWBS: minified CSS -->
         <link rel="stylesheet" href="{f:uri.resource(path: 'bower_components/bootstrap/dist/css/bootstrap.min.css')}">
         <!-- jQuery -->
-        <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
+        <script src="{f:uri.resource(path: 'bower_components/jquery/dist/jquery.min.js')}"></script>
         <!-- TWBS: minified JavaScript -->
         <script src="{f:uri.resource(path: 'bower_components/bootstrap/dist/js/bootstrap.min.js')}"></script>
 
