--- a/Resources/Private/Templates/Administration/EditAppointment.html
+++ b/Resources/Private/Templates/Administration/EditAppointment.html
@@ -55,6 +55,7 @@
                 <div class="form-group" style="{f:if(condition: appointment.participants, then: 'display:none')}">
                     <label for="freetext"><f:translate id="form.freetext" /></label>
                     <f:form.textarea property="freetext" class="form-control" id="freetext" rows="6" placeholder="{f:translate(id: 'form.freetext.placeholder')}" value="{appointment.freetext}" />
+                    <p class="help-block"><span id="charsLeft"></span> <f:translate id="charsLeft" /> // <span id="linesLeft"></span> <f:translate id="linesLeft" /></p>
                 </div>
                 <div class="form-group">
                     <label for="fontColor"><f:translate id="form.fontColor" /></label>
