--- a/Resources/Private/Templates/Administration/NewAppointment.html
+++ b/Resources/Private/Templates/Administration/NewAppointment.html
@@ -54,6 +54,7 @@
                 <div class="form-group">
                     <label for="freetext"><f:translate id="form.freetext" /></label>
                     <f:form.textarea property="freetext" class="form-control" id="freetext" rows="6" placeholder="{f:translate(id: 'form.freetext.placeholder')}" />
+                    <p class="help-block"><span id="charsLeft"></span> <f:translate id="charsLeft" /> // <span id="linesLeft"></span> <f:translate id="linesLeft" /></p>
                 </div>
                 <div class="form-group">
                     <label for="fontColor"><f:translate id="form.fontColor" /></label>
