--- a/Resources/Private/Templates/Standard/Index.html
+++ b/Resources/Private/Templates/Standard/Index.html
@@ -15,7 +15,7 @@
                     <h2 style="{inlineStyleColor}">{appointment.title}</h2>
                 </f:if>
                 <f:if condition="{appointment.freetext}">
-                    <f:then><p>{appointment.freetext -> f:format.nl2br()}</p></f:then>
+                    <f:then><p>{appointment.freetext}</p></f:then>
                     <f:else>
                         <f:if condition="{participants}">
                             <table class="table table-condensed" style="height:100%">
